manifests/general/svc-frontend-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-proxy
  namespace: otus-proj
spec:
  type: ExternalName
  externalName: frontend.microservices-demo.svc.cluster.local
  ports:
  - port: 80
