manifests/general/svc-nginx-service-test.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: otus-proj
spec:
  selector:
    app: nginx-test
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
