manifests/general/ing-general.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: general-ingress
  namespace: otus-proj
spec:
  ingressClassName: general-nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-proxy
                port:
                  number: 80
          - path: /argocd/
            pathType: Prefix
            backend:
                service:
                  name: argocd-proxy
                  port:
                    number: 80
          - path: /grafana/
            pathType: Prefix
            backend:
              service:
                name: grafana-proxy
                port:
                  number: 3000
